assets/scss/pages/_single-course.scss
// Masteriyo Single course

.masteriyo-single-course {
	display: flex;
	flex-wrap: wrap;
	margin-top: $spacing_32px;
	margin-left: -#{$spacing_10px};
	margin-right: -#{$spacing_10px};
	flex-direction: row;

	&--main {
		background-color: var(--masteriyo-color-white);
		@include masteriyo-shadow-1;
		border-radius: $border_radius_8;
		flex: 0 0 70%;
		height: 100%;
		padding: 0;

		.masteriyo-course-author {
			&--name {
				max-width: 100%;
			}
		}

		&__content {
			.masteriyo-stab {
				padding: 0 $spacing_32px;
			}

			.course-overview {
				padding: 0 $spacing_32px $spacing_32px;

				ul li p,
				ol li p {
					margin-bottom: $spacing_4px;
				}
			}
		}
	}

	&--title {
		font-size: 28px;
		font-weight: 700;
		margin-bottom: $spacing_24px;
		padding: 0 $spacing_32px;
	}

	&--title-tag {
		font-size: 14px;
		border-radius: $border_radius_50;
		position: absolute;
		top: 0;
	}

	&--btn {
		border-radius: $border_radius_100;
	}

	&--mdetail {
		display: flex;
		align-items: center;
		font-weight: 600;

		svg {
			margin-right: $spacing_8px;
			fill: var(--masteriyo-color-grey-dark);
		}
	}

	&--aside {
		background: var(--masteriyo-color-white);
		flex-basis: 100%;
		width: 100%;
		height: fit-content;
		@include masteriyo-shadow-1;
		border-radius: $border_radius_8;
		display: flex;
		flex-direction: column;
		padding-top: $spacing_24px;
		padding-bottom: $spacing_24px;

		.masteriyo-time-btn {
			padding: 0 $spacing_24px $spacing_24px;
			border-top: none;
			border-bottom: 1px solid var(--masteriyo-color-border);
		}

		.masteriyo-single-course-stats {
			display: flex;
			flex-direction: row;
			flex-wrap: wrap;
			margin-top: $spacing_20px;
			padding: 0 $spacing_24px;

			& > div {
				flex: 1 1 50%;
				margin-top: $spacing_20px;
			}

			span {
				color: var(--masteriyo-color-text);
				font-size: 14px;
				font-weight: 400;
			}

			.masteriyo-icon-svg > svg {
				fill: var(--masteriyo-color-primary);
			}
		}

		.masteriyo-course--content__description {
			padding: 0 $spacing_24px;
			margin-top: $spacing_30px;
			margin-bottom: 0;

			.title {
				font-weight: bold;
				font-size: 16px;
				line-height: 120%;
			}

			ul {
				display: flex;
				flex-direction: column;
				padding-left: $spacing_8px;
			}
		}

		.masteriyo-sticky {
			z-index: 9;
		}

		.masteriyo-icon-svg {
			color: var(--masteriyo-color-placeholder);

			& > svg {
				width: 20px;
				height: 20px;
				fill: var(--masteriyo-color-grey-dark);
			}
		}
	}

	.masteriyo-course--content {
		//Image
		.masteriyo-course--img-wrap {
			margin-bottom: $spacing_28px;
		}

		//Title
		&__title {
			margin-bottom: $spacing_14px;
			padding: 0 $spacing_15px;
		}

		// Category
		&__category {
			display: flex;
			flex-wrap: wrap;
			padding: 0 $spacing_32px;
		}

		// Author and rating
		&__rt {
			display: flex;
			align-items: center;
			padding: 0 $spacing_32px;
		}

		// course desciption
		&__description {
			.title {
				margin-bottom: $spacing_14px;
			}

			ul {
				list-style: none;
				margin: 0;
				padding: 0;

				li {
					display: flex;
					padding: $spacing_4px 0;

					p {
						margin: 0;
						padding-left: $spacing_8px;
					}
				}

				li::before {
					content: ("\2713");
				}
			}
		}

		// course stats
		&__stats {
			display: flex;
			align-items: center;
			justify-content: space-between;

			& > div {
				display: flex;
				align-items: center;
				justify-content: center;
				color: var(--masteriyo-color-text-light);

				span {
					margin-left: $spacing_4px;
				}

				svg {
					width: 20px;
					height: 20px;
					fill: var(--masteriyo-color-text-light);
				}
			}
		}

		// price and enroll now
		.masteriyo-course-price {
			.old-amount {
				text-decoration: line-through;
				font-size: 16px;
				color: var(--masteriyo-color-text-light);
			}

			.current-amount {
				font-size: 24px;
				color: var(--masteriyo-color-primary);
				font-weight: bold;
			}
		}

		&__title {
			line-height: 18px;
			margin: 0 0 $spacing_14px 0;

			&::before {
				content: "";
				display: none;
			}

			a {
				font-weight: bold;
				font-size: 18px;
				color: var(--masteriyo-color-grey-dark);
				text-decoration: none;
			}
		}
	}
}

// masteriyo-related-post
.masteriyo-related-post {
	margin-top: $spacing_24px;
	width: 100%;

	&__title {
		padding: 0 $spacing_15px;
		margin-bottom: $spacing_14px;
	}

	.masteriyo-course--card {
		background-color: var(--masteriyo-color-white);

		.masteriyo-course--content {
			padding: $spacing_24px;

			&__category {
				padding: 0;
			}

			&__title {
				padding: 0;
			}

			// Author and rating
			&__rt {
				padding: 0;
				justify-content: space-between;
			}
		}
	}
}

.masteriyo-stab-rs.boxshadow-none {
	box-shadow: none;
	padding: 0;
}

// Feature image.
.masteriyo-feature-img {
	position: relative;

	img {
		border-top-left-radius: $border_radius_8;
		border-top-right-radius: $border_radius_8;
	}

	.masteriyo-feature-course-image {
		width: 100%;
		max-height: 480px;
		object-fit: cover;
		object-position: center;
		border-top-right-radius: $border_radius_8;
		border-top-left-radius: $border_radius_8;
	}

	.masteriyo-price-tag,
	.masteriyo-heart {
		position: absolute;
	}

	.masteriyo-price-tag {
		top: 0;
		left: 0;
	}

	.masteriyo-price-tag {
		background: var(--masteriyo-color-primary);
		border-radius: 0 0 $border_radius_16 0;
		padding: $spacing_8px $spacing_16px;
		color: var(--masteriyo-color-white);
	}

	.masteriyo-heart {
		top: 20px;
		right: 20px;
		background: var(--masteriyo-color-white);
		border-radius: $border_radius_100;
		padding: $spacing_8px;
		@include masteriyo-shadow-1;

		&:hover {
			transform: scale(1.1);
		}
	}
}
/* ... */

